<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="playlist_maker">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Тёмная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="terms_of_use">Пользовательское соглашение</string>
    <string name="search_button_click">Клик на кнопку \"Поиск\".</string>
    <string name="media_library_button_click">Клик на кнопку \"Медиатека\".</string>
    <string name="settings_button_click">Клик на кнопку \"Настройки\".</string>
    <string name="yp_android_course_url">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="share_link">Поделиться ссылкой</string>
    <string name="student_email">goaltenders@yandex.ru</string>
    <string name="message_to_developers">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="yandex_offer_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="artist_and_time">%1$s • %2$s</string>
    <string name="nothing_was_found">Ничего не нашлось</string>
    <string name="something_went_wrong">Что-то пошло не так…</string>
    <string name="no_internet_connection">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="clear_history">Очистить историю</string>
    <string name="you_searched">Вы искали</string>
    <string name="save_track_in_search_history">Композиция \"%1$s\" сохранена в историю поиска."</string>
    <string name="country">Страна</string>
    <string name="genre">Жанр</string>
    <string name="year">Год</string>
    <string name="album">Альбом</string>
    <string name="length">Длительность</string>
    <string name="mock_track_time">0:30</string>
    <string name="your_media_library_is_empty">Ваша медиатека пуста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="you_didnt_make_any_playlists">Вы не создали ни одного плейлиста</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="playlist_name_hint">Название*</string>
    <string name="playlist_description_hint">Описание</string>
    <string name="create">Создать</string>
    <string name="playlist_alert_dialog_title">Завершить создание плейлиста?</string>
    <string name="playlist_alert_dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="playlist_alert_dialog_negative">Отмена</string>
    <string name="playlist_alert_dialog_positive">Завершить</string>
    <string name="cover_uri">%1$s.jpg</string>
    <string name="playlist_created_message">Плейлист %1$s создан</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="track_was_added">Трек успешно добавлен.</string>
    <string name="track_is_already_exist">Трек уже есть в плейлисте.</string>
    <plurals name="tracks_plurals">
        <item quantity="zero">%1$d треков</item>
        <item quantity="one">%1$d трек</item>
        <item quantity="two">%1$d трека</item>
        <item quantity="few">%1$d трека</item>
        <item quantity="many">%1$d треков</item>
        <item quantity="other">%1$d треков</item>
    </plurals>
    <plurals name="minutes_plurals">
        <item quantity="zero">%1$d минут</item>
        <item quantity="one">%1$d минута</item>
        <item quantity="two">%1$d минуты</item>
        <item quantity="few">%1$d минут</item>
        <item quantity="many">%1$d минут</item>
        <item quantity="other">%1$d минут</item>
    </plurals>
    <string name="playlist_properties">%1$s • %2$s</string>
    <string name="delete_playlist_track">Удалить трек</string>
    <string name="delete_playlist_track_message">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="delete_track_alert_dialog_positive">Удалить</string>
    <string name="delete_track_alert_dialog_negative">Отмена</string>
    <string name="share_playlist_track">\n%1$d. %2$s – %3$s (%4$s)</string>
    <string name="share_playlist">Поделиться</string>
    <string name="update_playlist_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="empty_playlist_message">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="delete_playlist_message">Хотите удалить плейлист?</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="update">Редактировать</string>
    <string name="save">Сохранить</string>
</resources>