<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Theme.PlaylistMaker.MainActivityLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragment.implementation.MainFragment">

    <TextView
        android:id="@+id/title_text_view"
        style="@style/TitleTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/offset_16"
        android:layout_marginTop="@dimen/offset_16"
        android:text="@string/playlist_maker"
        android:textColor="@color/yp_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_search"
        style="@style/Widget.Material3.Button.UnelevatedButton.MainActivityButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/offset_16"
        android:layout_marginTop="@dimen/offset_40"
        android:text="@string/search"
        app:icon="@drawable/ic_search"
        app:layout_constraintBottom_toTopOf="@id/button_media_library"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_text_view" />

    <Button
        android:id="@+id/button_media_library"
        style="@style/Widget.Material3.Button.UnelevatedButton.MainActivityButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/offset_16"
        android:layout_marginTop="@dimen/main_margin_top"
        android:text="@string/media_library"
        app:icon="@drawable/ic_media_library"
        app:layout_constraintBottom_toTopOf="@id/button_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_search" />

    <Button
        android:id="@+id/button_settings"
        style="@style/Widget.Material3.Button.UnelevatedButton.MainActivityButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/offset_16"
        android:layout_marginTop="@dimen/main_margin_top"
        android:layout_marginBottom="@dimen/offset_28"
        android:text="@string/settings"
        app:icon="@drawable/ic_settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_media_library" />

</androidx.constraintlayout.widget.ConstraintLayout>