<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SearchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        android:layout_marginTop="@dimen/offset_16"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_view_back"
            style="@style/BackImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/offset_4"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            style="@style/TitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/offset_28"
            android:text="@string/search" />

    </LinearLayout>

    <EditText
        android:id="@+id/edit_text_search"
        style="@style/SearchEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        android:layout_marginTop="@dimen/offset_24"
        android:drawableStart="@drawable/ic_search"
        android:drawableEnd="@drawable/ic_close"
        android:drawablePadding="@dimen/edit_text_drawable_padding"
        android:hint="@string/search"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLines="1"
        android:paddingHorizontal="@dimen/edit_text_padding_horizontal"
        android:paddingVertical="@dimen/edit_text_padding_vertical"
        android:singleLine="true" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_tracks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/offset_8" />

    <LinearLayout
        android:id="@+id/linear_layout_placeholder_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/offset_100"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/image_view_placeholder_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:src="@drawable/ic_search_no_internet" />

        <TextView
            android:id="@+id/text_view_placeholder_message"
            style="@style/PlaceholderMessageTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/offset_24"
            android:layout_marginTop="@dimen/offset_16"
            android:gravity="center_horizontal|top"
            tools:text="@string/no_internet_connection" />

        <Button
            android:id="@+id/button_placeholder_refresh"
            style="@style/PlaceholderRefreshButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/offset_24"
            android:text="@string/refresh" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_search_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/offset_24"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/text_view_search_history"
            style="@style/PlaceholderMessageTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/offset_16"
            android:text="@string/you_searched"
            android:visibility="visible" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_search_history"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/offset_8"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_clear_search_history"
            style="@style/PlaceholderRefreshButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/offset_24"
            android:text="@string/clear_history"
            android:visibility="visible" />

    </LinearLayout>

</LinearLayout>