<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.implementation.NewPlaylistFragment">

    <ImageView
        android:id="@+id/image_view_back"
        style="@style/BackImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/offset_16"
        android:layout_marginTop="@dimen/offset_16"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_title"
        style="@style/TitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/offset_24"
        android:text="@string/new_playlist"
        app:layout_constraintBottom_toBottomOf="@id/image_view_back"
        app:layout_constraintStart_toEndOf="@id/image_view_back"
        app:layout_constraintTop_toTopOf="@id/image_view_back" />

    <ImageView
        android:id="@+id/image_view_add_cover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/offset_24"
        android:layout_marginTop="@dimen/offset_44"
        android:background="@drawable/ic_dash_background"
        android:importantForAccessibility="no"
        android:scaleType="center"
        android:src="@drawable/ic_add_photo"
        app:layout_constraintBottom_toTopOf="@id/text_input_layout_name"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_view_back" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_name"
        style="@style/InputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/offset_16"
        android:layout_marginTop="@dimen/offset_32"
        android:hint="@string/playlist_name_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_view_add_cover">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_edit_text_name"
            style="@style/InputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_description"
        style="@style/InputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/offset_16"
        android:layout_marginTop="@dimen/offset_16"
        android:hint="@string/playlist_description_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_edit_text_description"
            style="@style/InputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_create"
        style="@style/CucumberButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/offset_16"
        android:layout_marginBottom="@dimen/offset_32"
        android:text="@string/create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>